# MPI-Collectives

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h  config.h.in  config.status  configure  configure.ac  kchain-pipeline.ods  libtool
